--- a/mta.yaml
+++ b/mta.yaml
@@ -11,8 +11,8 @@ build-parameters:
       commands:
         - npm install --production
         - npx -p @sap/cds-dk cds build --production
-        - npx rimraf /gen/db/src/gen/data
-        - npx rimraf /gen/db/src/gen/csv
+        - npx rimraf gen/db/src/gen/data
+        - npx rimraf gen/db/src/gen/csv
 
 modules:
   # ---------------- DATABASE DEPLOYER MODULE ------------------
